--- a/w04/d04/m2-models-and-migrations/starter-code/Rakefile
+++ b/w04/d04/m2-models-and-migrations/starter-code/Rakefile
@@ -1,7 +1,6 @@
+require "sinatra/activerecord"
 require "sinatra/activerecord/rake"
 
 namespace :db do
-  task :load_config do
-    require "./app"
-  end
+  task :load_config
 end
