--- a/w07/d03/m2-express-views-lab/solution-code/app/package.json
+++ b/w07/d03/m2-express-views-lab/solution-code/app/package.json
@@ -11,7 +11,9 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.2",
     "debug": "~2.2.0",
+    "ejs": "^2.3.3",
     "express": "~4.13.1",
+    "express-helpers": "^1.3.2",
     "method-override": "^2.3.4",
     "mongoose": "^4.0.7",
     "morgan": "~1.6.1",
